# aider-mcp

./: DEVPLAN.md  README.md  config.example.toml  kiso.toml  pyproject.toml  run.py  validator.py
src/kiso_aider_mcp/: __init__.py  aider_runner.py  server.py
tests/: conftest.py  test_affordable_cap_retry.py  test_aider_runner.py  test_config.py  test_functional.py  test_live.py  test_manifest.py  test_run.py  test_run_aider.py  test_server.py
