[project]
name = "kiso-aider-mcp"
version = "0.2.0"
description = "aider codegen as a Model Context Protocol server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "aider-chat>=0.82",
]

[project.scripts]
kiso-aider-mcp = "kiso_aider_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiso_aider_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: integration test requiring a live OPENROUTER_API_KEY",
]
